--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Page Title</title>
   </head>
   <body>
-    <iframe width="560" height="315" src="https://www.dropbox.com/s/oykc0c9nz2rt5uk/Sun_Tzu_The_Art_of_War.mp4?raw=1" style="height:200px;width:300px;" title="Iframe Example"></iframe>
+    <iframe src="https://www.dropbox.com/s/oykc0c9nz2rt5uk/Sun_Tzu_The_Art_of_War.mp4?raw=1" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    
   </body>
 </html>  
